// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a. Ranges Slider: basic renderer 1`] = `
<div
  class="l3-slider"
  data-testid="l3-slider"
>
  <div
    class="l3-slider__base l3-slider__base--small"
    data-testid="l3-slider__base"
  >
    <div
      class="l3-slider__rail"
      data-testid="l3-slider__rail"
    >
      <div
        class="l3-slider__track"
      />
      <div
        class="l3-slider__filled-track"
        style="left: 25%; width: 40%;"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        aria-valuetext="25%"
        class="l3-slider__thumb l3-slider__thumb--index-0"
        data-testid="l3-slider__thumb-0"
        role="slider"
        style="left: 25%;"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="65"
        aria-valuetext="65%"
        class="l3-slider__thumb l3-slider__thumb--index-1"
        data-testid="l3-slider__thumb-1"
        role="slider"
        style="left: 65%;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`b. Ranges Slider Active/Inactive 01. show Tooltip when hover Start Thumb 1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
          style="left: 25%;"
          tabindex="0"
        />
+       <span
+         class="l3-style-dialog-content-wrapper"
+         data-popper-reference-hidden="false"
+         style="position: absolute; left: 0px; top: 0px;"
+       >
+         <div
+           class="l3-style-dialog-content-component top edge-center has-tooltip l3-style-animation-expand-appear-done l3-style-animation-expand-enter-done"
+         >
+           <div
+             class="l3-style-tooltip l3-style-tooltip-dark padding-size-undefined"
+           >
+             25%
+           </div>
+           <div
+             class="l3-style-tooltip-arrow l3-style-arrow l3-style-arrow-dark padding-size-undefined"
+             data-placement="top"
+             style="position: absolute;"
+           />
+         </div>
+       </span>
        <div
          aria-disabled="false"
          aria-valuemax="100"
`;

exports[`b. Ranges Slider Active/Inactive 02. show Tooltip when hover End Thumb 1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
          style="left: 65%;"
          tabindex="0"
        />
+       <span
+         class="l3-style-dialog-content-wrapper"
+         data-popper-reference-hidden="false"
+         style="position: absolute; left: 0px; top: 0px;"
+       >
+         <div
+           class="l3-style-dialog-content-component top edge-center has-tooltip l3-style-animation-expand-appear-done l3-style-animation-expand-enter-done"
+         >
+           <div
+             class="l3-style-tooltip l3-style-tooltip-dark padding-size-undefined"
+           >
+             65%
+           </div>
+           <div
+             class="l3-style-tooltip-arrow l3-style-arrow l3-style-arrow-dark padding-size-undefined"
+             data-placement="top"
+             style="position: absolute;"
+           />
+         </div>
+       </span>
      </div>
    </div>
  </div>
`;

exports[`b. Ranges Slider Active/Inactive 03. hide Tooltip when unhover Thumb 1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
          style="left: 25%;"
          tabindex="0"
        />
-       <span
-         class="l3-style-dialog-content-wrapper"
-         data-popper-reference-hidden="false"
-         style="position: absolute; left: 0px; top: 0px;"
-       >
-         <div
-           class="l3-style-dialog-content-component top edge-center has-tooltip l3-style-animation-expand-appear-done l3-style-animation-expand-enter-done"
-         >
-           <div
-             class="l3-style-tooltip l3-style-tooltip-dark padding-size-undefined"
-           >
-             25%
-           </div>
-           <div
-             class="l3-style-tooltip-arrow l3-style-arrow l3-style-arrow-dark padding-size-undefined"
-             data-placement="top"
-             style="position: absolute;"
-           />
-         </div>
-       </span>
        <div
          aria-disabled="false"
          aria-valuemax="100"
`;

exports[`b. Ranges Slider Active/Inactive 04. activate Start Thumb by Tab key press  1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
          aria-valuemin="0"
          aria-valuenow="25"
          aria-valuetext="25%"
-         class="l3-slider__thumb l3-slider__thumb--index-0"
+         class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-0"
          data-testid="l3-slider__thumb-0"
          role="slider"
          style="left: 25%;"
          tabindex="0"
+       />
+       <span
+         class="l3-style-dialog-content-wrapper"
+         data-popper-reference-hidden="false"
+         style="position: absolute; left: 0px; top: 0px;"
+       >
+         <div
+           class="l3-style-dialog-content-component top edge-center has-tooltip l3-style-animation-expand-appear-done l3-style-animation-expand-enter-done"
+         >
+           <div
+             class="l3-style-tooltip l3-style-tooltip-dark padding-size-undefined"
+           >
+             25%
+           </div>
+           <div
+             class="l3-style-tooltip-arrow l3-style-arrow l3-style-arrow-dark padding-size-undefined"
+             data-placement="top"
+             style="position: absolute;"
            />
+         </div>
+       </span>
        <div
          aria-disabled="false"
          aria-valuemax="100"
`;

exports[`b. Ranges Slider Active/Inactive 05. activate End Thumb by Tab key press  1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
          aria-valuemin="0"
          aria-valuenow="25"
          aria-valuetext="25%"
-         class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-0"
+         class="l3-slider__thumb l3-slider__thumb--index-0"
          data-testid="l3-slider__thumb-0"
          role="slider"
          style="left: 25%;"
+         tabindex="0"
+       />
+       <div
+         aria-disabled="false"
+         aria-valuemax="100"
+         aria-valuemin="0"
+         aria-valuenow="65"
+         aria-valuetext="65%"
+         class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-1"
+         data-testid="l3-slider__thumb-1"
+         role="slider"
+         style="left: 65%;"
          tabindex="0"
        />
        <span
@@ --- --- @@
            <div
              class="l3-style-tooltip l3-style-tooltip-dark padding-size-undefined"
            >
-             25%
+             65%
            </div>
            <div
              class="l3-style-tooltip-arrow l3-style-arrow l3-style-arrow-dark padding-size-undefined"
@@ --- --- @@
            />
          </div>
        </span>
-       <div
-         aria-disabled="false"
-         aria-valuemax="100"
-         aria-valuemin="0"
-         aria-valuenow="65"
-         aria-valuetext="65%"
-         class="l3-slider__thumb l3-slider__thumb--index-1"
-         data-testid="l3-slider__thumb-1"
-         role="slider"
-         style="left: 65%;"
-         tabindex="0"
-       />
      </div>
    </div>
  </div>
`;

exports[`b. Ranges Slider Active/Inactive 06. de-activate Thumb by Tab key press, when End Thumb focused  1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
          aria-valuemin="0"
          aria-valuenow="65"
          aria-valuetext="65%"
-         class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-1"
+         class="l3-slider__thumb l3-slider__thumb--index-1"
          data-testid="l3-slider__thumb-1"
          role="slider"
          style="left: 65%;"
          tabindex="0"
-       />
-       <span
-         class="l3-style-dialog-content-wrapper"
-         data-popper-reference-hidden="false"
-         style="position: absolute; left: 0px; top: 0px;"
-       >
-         <div
-           class="l3-style-dialog-content-component top edge-center has-tooltip l3-style-animation-expand-appear l3-style-animation-expand-appear-active"
-         >
-           <div
-             class="l3-style-tooltip l3-style-tooltip-dark padding-size-undefined"
-           >
-             65%
-           </div>
-           <div
-             class="l3-style-tooltip-arrow l3-style-arrow l3-style-arrow-dark padding-size-undefined"
-             data-placement="top"
-             style="position: absolute;"
        />
-         </div>
-       </span>
      </div>
    </div>
  </div>
`;

exports[`c. Ranges Slider Key Events 01. decrease value by Left/Down keys press 1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
        />
        <div
          class="l3-slider__filled-track"
-         style="left: 25%; width: 40%;"
+         style="left: 23%; width: 42%;"
        />
        <div
          aria-disabled="false"
          aria-valuemax="100"
          aria-valuemin="0"
-         aria-valuenow="25"
-         aria-valuetext="25%"
+         aria-valuenow="23"
+         aria-valuetext="23%"
          class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-0"
          data-testid="l3-slider__thumb-0"
          role="slider"
-         style="left: 25%;"
+         style="left: 23%;"
          tabindex="0"
        >
          <label
            class="l3-slider__thumb-label"
          >
-           25%
+           23%
          </label>
        </div>
        <div
`;

exports[`c. Ranges Slider Key Events 02. increase value by Right/Up keys press 1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
        />
        <div
          class="l3-slider__filled-track"
-         style="left: 25%; width: 40%;"
+         style="left: 25%; width: 42%;"
        />
        <div
          aria-disabled="false"
@@ --- --- @@
          aria-disabled="false"
          aria-valuemax="100"
          aria-valuemin="0"
-         aria-valuenow="65"
-         aria-valuetext="65%"
+         aria-valuenow="67"
+         aria-valuetext="67%"
          class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-1"
          data-testid="l3-slider__thumb-1"
          role="slider"
-         style="left: 65%;"
+         style="left: 67%;"
          tabindex="0"
        >
          <label
            class="l3-slider__thumb-label"
          >
-           65%
+           67%
          </label>
        </div>
      </div>
`;

exports[`c. Ranges Slider Key Events 03. decrease value (step 10%) by PageDown key press 1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
        />
        <div
          class="l3-slider__filled-track"
-         style="left: 25%; width: 40%;"
+         style="left: 25%; width: 30%;"
        />
        <div
          aria-disabled="false"
@@ --- --- @@
          aria-disabled="false"
          aria-valuemax="100"
          aria-valuemin="0"
-         aria-valuenow="65"
-         aria-valuetext="65%"
+         aria-valuenow="55"
+         aria-valuetext="55%"
          class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-1"
          data-testid="l3-slider__thumb-1"
          role="slider"
-         style="left: 65%;"
+         style="left: 55%;"
          tabindex="0"
        >
          <label
            class="l3-slider__thumb-label"
          >
-           65%
+           55%
          </label>
        </div>
      </div>
`;

exports[`c. Ranges Slider Key Events 04. increase value (step 10%) by PageUp key pres 1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
        />
        <div
          class="l3-slider__filled-track"
-         style="left: 25%; width: 40%;"
+         style="left: 45%; width: 20%;"
        />
        <div
          aria-disabled="false"
          aria-valuemax="100"
          aria-valuemin="0"
-         aria-valuenow="25"
-         aria-valuetext="25%"
+         aria-valuenow="45"
+         aria-valuetext="45%"
          class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-0"
          data-testid="l3-slider__thumb-0"
          role="slider"
-         style="left: 25%;"
+         style="left: 45%;"
          tabindex="0"
        >
          <label
            class="l3-slider__thumb-label"
          >
-           25%
+           45%
          </label>
        </div>
        <div
`;

exports[`c. Ranges Slider Key Events 05. change value by keys press in Step and Label mode 1`] = `
Snapshot Diff:
- Default Render
+ Current Render

@@ --- --- @@
      <div
        data-testid="mock-text-field-comp"
      >
-       {"value":"25%"}
+       {"value":"45%"}
      </div>
    </div>
    <div
@@ --- --- @@
        />
        <div
          class="l3-slider__filled-track"
-         style="left: 25%; width: 40%;"
+         style="left: 45%; width: 20%;"
        />
        <div
          aria-disabled="false"
          aria-valuemax="100"
          aria-valuemin="0"
-         aria-valuenow="25"
-         aria-valuetext="25%"
+         aria-valuenow="45"
+         aria-valuetext="45%"
          class="l3-slider__thumb l3-slider__thumb--focused l3-slider__thumb--index-0"
          data-testid="l3-slider__thumb-0"
          role="slider"
-         style="left: 25%;"
+         style="left: 45%;"
          tabindex="0"
        >
          <label
            class="l3-slider__thumb-label"
          >
-           25%
+           45%
          </label>
        </div>
        <div
`;
